docs: 자바 문서 최신화

--- a/Java/정적 멤버.md
+++ b/Java/정적 멤버.md
@@ -1,4 +1,6 @@
 # 정적 멤버(클래스 멤버)
+> 💡 Kotlin : companion object로 생성된 멤버로, 클래스 당 하나의 값을 가지며 인스턴스를 생성하지 않고도 클래스 내부 정보에 접근해야 하는 필드와 메소드를 관리할 때 사용하는 객체로서, 해당 클래스가 로드되면 초기화가 이루어진다.
+
 - static이라는 키워드가 붙은 필드(전역 변수) 또는 메소드가 정적 멤버이다.
 
 ## 정적 멤버 선언
@@ -61,7 +63,7 @@ public class StaticMemberEx02 {
     - 따라서 인스턴스들의 데이터와 관계없이 동일한 로직(메소드)을 사용해야 할 때 정의를 해주는게 좋다.
 - 주의사항
     1. 정적 메소드에서는 정적 필드만 사용이 가능하고 정적 메소드만 호출이 가능하다.
-        - 즉, 인스턴스 멤버를 사용하려면 인스턴스를 생성후 호출해야 한다.
+        - 즉, 인스턴스 멤버를 사용하려면 인스턴스를 생성 후 호출해야 한다.
     2. [this 키워드](https://velog.io/@dev-baik/%EC%9D%B8%EC%8A%A4%ED%84%B4%EC%8A%A4-%EB%A9%A4%EB%B2%84#this)를 사용할 수 없다.
     3. 메소드 오버라이딩이 불가능하다.
 ```java
@@ -84,7 +86,7 @@ class A {
     public class StaticMemberEx03 {
         public static void main(String[] args) {
             A.staticField = 1; // A클래스 정적 필드 사용 가능
-            // A.staticField = 1; // A클래스 인스턴스 필드 사용 불가(필요시 인스턴스 생성 후 호출)
+            // A.instanceField = 1; // A클래스 인스턴스 필드 사용 불가(필요시 인스턴스 생성 후 호출)
             A.staticMethod(); // A클래스 정적 메소드 사용 가능
             // A.instanceMethod(); // A클래스 인스턴스 메소드 사용 불가(필요시 인스턴스 생성 후 호출)
         }
