--- a/Java/인스턴스 멤버.md
+++ b/Java/인스턴스 멤버.md
@@ -34,8 +34,9 @@ public class InstanceMemberEx01 {
 - 인스턴스 멤버의 주요 내용은 인스턴스를 생성하지 않으면 사용이 불가능하다는 것이다.
 
 ## this.
-- this는 인스턴스의 자기 자신을 의미한다.
-- this.은 주로 필드(전역 변수)와 메소드 또는 생성자의 매개변수가 동일할 때 인스턴스 필드임을 명확히 하기 위해서 사용한다.
+
+> 💡 인스턴스의 자기 자신을 의미하며, 주로 필드(전역 변수)와 메소드 또는 생성자 매개변수가 동일한 이름을 가질 때 인스턴스 필드임을 명확히 하기 위해서 사용한다.
+
 ```java
 import java.util.Scanner;
 
@@ -76,8 +77,11 @@ public class InstanceMemberEx02 {
 ```
 
 ## this()
-- this()는 자기 자신의 생성자를 호출할 떄 사용하는 키워드이다.
-- 생성자가 다양해질때([오버로딩](https://blog.naver.com/heartflow89/220956516175)) this()를 이용하면 중복된 코드를 간단하게 작성할 수 있다.
+
+> 💡 같은 클래스 내의 다른 생성자를 호출할 때 사용하며, 생성자가 다양해질때([오버로딩](https://blog.naver.com/heartflow89/220956516175)) this() 메소드를 이용하면 중복된 코드를 간단하게 작성할 수 있다.
+
+> ✅ **오버로딩** : 1개의 클래스에서 동일한 이름의 메소드 또는 생성자를 여러개 정의하는 것으로, 매개변수의 자료형, 개수, 순서를 다르게 하여 선언하여야 한다.
+
 ```java
 public class InstanceMemberEx03 {
     String year;
