--- a/CS/프로그램과 프로세스.md
+++ b/CS/프로그램과 프로세스.md
@@ -10,13 +10,13 @@
 - 모든 프로그램은 [운영체제](https://jerryjerryjerry.tistory.com/171)가 실행되기 위한 메모리 공간을 할당해 줘야 실행될 수 있다.
     - 프로그램을 실행하는 순간 파일은 컴퓨터 메모리에 올라가게 되고, 운영체제로부터 시스템 자원(CPU)을 할당받아 프로그램 코드를 실행시킨다.
 
-![](https://velog.velcdn.com/images/dev-baik/post/23cae93a-cf76-4dd6-83b0-f4bd69ae20fa/image.png)
+ <img src="https://velog.velcdn.com/images/dev-baik/post/23cae93a-cf76-4dd6-83b0-f4bd69ae20fa/image.png"/>
 
 > ✅ **운영체제(OS, Operating System)** : 컴퓨터 시스템의 핵심 소프트웨어로, 컴퓨터 하드웨어와 응용 프로그램 간의 상호작용을 관리하고 제어하는 것
 >
-> ☑️ **목적** : 사용자와 하드웨어 사이의 인터페이스를 제공해 효율적으로 응용 프로그램이 동작하도록 지원하고, 시스템 자원을 효율적으로 관리하여 응용 프로그램이 원활하게 동작할 수 있도록 한다.
+> ☑️ **목적** : 사용자와 하드웨어 사이의 인터페이스를 제공하고 시스템 자원을 효율적으로 관리하여, 응용 프로그램이 원활하게 동작할 수 있도록 한다.
 
-- **프로세스** : 프로그램을 실행 시켜 정적인 프로그램이 동적으로 변하여 프로그램이 돌아가고 있는 상태를 말한다.
+- **프로세스** : 프로그램을 실행 시켜 정적인 프로그램이 동적으로 변하여 프로그램이 돌아가고 있는 상태
 
 <table>
     <tr>
@@ -35,7 +35,7 @@
 
 ## 스레드
 
-> 💡 **스레드** : 프로세스가 할당받은 자원을 이용하는 실행 흐름의 단위로서, 같은 프로세스 내에서 힙 메모리를 공유하고, 각 스레드는 개별 스택 메모리를 가지고 있어 독립적인 실행 흐름을 유지한다.
+> 💡프로세스가 할당받은 자원을 이용하는 실행 흐름의 단위로서, 같은 프로세스 내에서 힙 메모리를 공유하고, 각 스레드는 개별 스택 메모리를 가지고 있어 독립적인 실행 흐름을 유지한다.
 
 - 과거에는 프로그램 실행에 하나의 프로세스만을 사용하여 작업했지만, 프로그램이 복잡해지고 다양해짐에 따라 이런 방식에는 한계가 있었다.
 - 동일한 프로그램을 여러 개의 프로세스로 만들게 되면, 그만큼 메모리를 차지하고 CPU에서 할당받는 자원이 비효율적으로 사용될 수 있다.
@@ -69,7 +69,7 @@
 #### 스택 영역(Stack)
 - 지역 변수와 같은 호출한 함수가 종료되면 되돌아올 임시적인 자료를 저장하는 독립적인 공간
 - 함수의 호출과 함께 할당되며, 함수의 호출이 완료되면 소멸한다.
-- 만일 stack 영역을 초과화면 stack overflow 에러가 발생한다.
+- 만일 stack 영역을 초과하면 stack overflow 에러가 발생한다.
 
 #### 힙 영역(Heap)
 - 생성자, 인스턴스와 같은 동적으로 할당되는 데이터들을 위해 존재하는 공간
@@ -114,7 +114,7 @@
 ## 멀티 스레드
 - 하나의 프로세스 안에 여러 개의 스레드가 있는 것으로, 하나의 프로그램에서 두가지 이상의 동작을 동시에 처리하도록 하는 행위가 가능해진다.
     - 즉, 하나의 스레드가 지연되더라도, 다른 스레드는 작업을 지속할 수 있게 된다.
-    - **예시)** : 사용자가 서버 데이터베이스에 자료를 요청하는 동안 브라우저의 다른 기능을 이용할 수 있다.
+    - **예시)** 사용자가 서버 데이터베이스에 자료를 요청하는 동안 브라우저의 다른 기능을 이용할 수 있다.
 
 <img src="https://velog.velcdn.com/images/dev-baik/post/e85f39d9-95a2-4d18-b64e-e599f9f3e83c/image.png"/>
 
